2006-11-27  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(getCaretShape(TextHitInfo,Rectangle2D)): Implemented.
	(getCaretShape(TextHitInfo)): Use natural bounds.
	(getCaretShapes(int,Rectangle2D,CaretPolicy)): New API method.
	(getCaretShapes(int,Rectangle2D)): Delegate to new method
	above with DEFAULT_CARET_POLICY.
	(getCaretShapes(int)): Use natural bounds.

2006-11-27  Roman Kennke  <kennke@aicas.com>

	* java/awt/font/TextLayout.java
	(Run.font): New field.
	(Run.location): New field.
	(Run.Run): Initialize font.
	(font): Removed field. This is moved into Run as the actual font
	is something run-specific.
	(TextLayout(String,Font,FontRenderContext)): Set font on the
	single runs. Layout the runs here.
	(TextLayout(TextLayout,int,int)): Copy over the run fonts.
	(findRunAtIndex): New helper method.
	(getCaretInfo): Implemented.
	(layoutRuns): New helper method.
	(toString): Don't put font in output string.

2006-11-27  Raif S. Naffah  <classpath@naffah-raif.name>

	* AUTHORS: Added Jeroen Fritjers.

2006-11-27  neugens  <neugens@nirvana.limasoftware.net>

	* java/text/DecimalFormat.java (formatInternal): Add an explicit test
	for FieldPosition to be null.
	Check if the factional part is just 0 and can be omitted from the
	result.
	(scanNegativePattern): Fixed index out of bound exception when searching
	for international currency symbol in negative pattern.	

2006-11-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/beans/beancontext/BeanContextSupport.java:
	(readObject(ObjectInputStream)): Implemented.
	(writeObject(ObjectOutputStream)): Likewise.
	(BCSChild.getTargetChild()): Added.
	(bcsPreDeserializationHook()): Implemented.
	(bcsPreSerializationHook()): Likewise.
	(childDeserializedHook(Object,BCSChild)): Likewise.
	(isSerializing()): Likewise.
	(readChildren(ObjectInputStream)): Likewise.
	(writeChildren(ObjectOutputStream)): Likewise.
	
2006-11-26  Roger Sayle  <roger <at> eyesopen.com>